# mcp_client

./: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
static/: index.html
