[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Dat.huynh"
version = "0.0.2"
description = "Optimized Workforce Learning for General Multi-Agent Assistance in Real-World Task Automation"
authors = [{ name = "AVEPOINT.com" }]
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
keywords = [
    "optimized-workforce-learning",
    "multi-agent-assistance",
    "task-automation",
    "real-world-tasks",
    "artificial-intelligence",
    "agent-collaboration",
    "workforce-optimization",
    "learning-systems"
]

dependencies = [
    "fastapi",
    "uvicorn",
    "langchain_mcp_adapters",
    "langgraph",
    "openai"
]

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["assignment", "arg-type", "return-value"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
ignore_missing_imports = true
